# SpanishPronounciationAnki

./: README.md  README_BUILD.md  build_addon.py  build_spanish_pronunciation_trainer.py  create_spanish_decks_via_ankiconnect.py  decks_data.py  export_and_release.py  flake.nix  install_plugin.py  pyproject.toml  update_export_and_release.py
anki_deck_exporter/: README.md  __init__.py  ankiconnect_integration.py  config.json  deck_exporter.py  manifest.json
spanish_pronunciation_addon/: README.md  __init__.py  config.json  config.md  logger.py  manifest.json
